--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,41 @@
   <title>GST Medicose</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="assets/images/gst_medicose.png">
+  <!-- <link rel="icon" type="image/png" href="assets/images/gst_medicose.png"> -->
+  <!-- Favicon -->
+  <link rel="icon" href="assets/icons/favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg">
+  <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png">
+
+  <!-- Apple Touch Icon (iOS) -->
+  <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png">
+
+  <!-- Web App Manifest -->
+  <link rel="manifest" href="assets/icons/site.webmanifest">
+
+  <!-- iOS PWA Meta -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="GST Medicose">
+
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#efefef">
+  <!-- Pre-bootstrap theme sync -->
+  <script>
+    (function () {
+      const saved = localStorage.getItem('gstm-theme-preference');
+      const systemDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+      const isDark = saved === 'dark' || (saved === 'system' && systemDark);
+      const meta = document.querySelector('meta[name="theme-color"]');
+      if (isDark) {
+        document.documentElement.setAttribute('data-theme', 'dark');
+        meta?.setAttribute('content', '#121212');
+      } else {
+        document.documentElement.removeAttribute('data-theme');
+        meta?.setAttribute('content', '#efefef');
+      }
+    })();
+  </script>
   <script src="assets/runtime-config.js"></script>
 </head>
 <body>
